trunk/Archive2/a1/6882997f0191d2/output
+ clang -x c -std=c11 -O3 -Wall -pedantic-errors main.cpp
main.cpp:1:1: warning: type specifier missing, defaults to 'int' [-Wimplicit-int]
main()
^~~~
main.cpp:6:4: error: arithmetic on a pointer to void is a GNU extension [-Werror,-Wpointer-arith]
ptr++;
~~~^
main.cpp:7:2: error: no newline at end of file [-Werror,-Wnewline-eof]
}
 ^
1 warning and 2 errors generated.
